--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm": "^3.0.0"
   },
   "scripts": {
-    "start":       "node server.js"
+    "start": "nodemon server.js",
+    "build": "browserify src/main.js -o bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +19,12 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
-    "express": "^4.14.0",
     "clean-css": "^3.4.9",
+    "express": "^4.14.0",
     "htmlprocessor": "^0.2.3",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "nodemon": "^1.11.0",
     "uglify-js": "^2.6.2"
   }
 }
