--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "^3.0.0"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "build": "browserify src/main.js -o bundle.js"
   },
   "keywords": [],
